--- a/api/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/api/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,7 @@
 databaseChangeLog:
   - include:
       file: "db/changelog/scripts/v001-create-application-schema.yaml"
+  - include:
+      file: "db/changelog/scripts/v002-create-users-sequence.yaml"
+  - include:
+      file: "db/changelog/scripts/v003-create-users-table.yaml"
